fix filter spacing

--- a/P2_lannoy_thomas/css/style.css
+++ b/P2_lannoy_thomas/css/style.css
@@ -408,6 +408,7 @@ figure{
       -ms-flex-pack: left;
           justify-content: left;
   gap: 25px;
+  margin-top:25px;
 }
 #info {
   margin: 45px;
